Pass first gradient to refreshcolor function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             ['#FA2E00','#FA008F','#FBCB94','#FA0200','#FA5A00'],
         ];
 
-        refreshcolor();
+        refreshcolor(gradients[0]);
 
         document.addEventListener('mousemove', (event) => {
 
