--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
 
         document.addEventListener('mousemove', (event) => {
             const height = window.innerHeight;
-            const mouseY = event.clientY;
-            const perc = (mouseY / height)*100;
-            if (perc >= 0 && perc <= 25) {
-                refreshcolor(gradients[0]);
-            } else if (perc > 25 && perc <= 50) {
-                refreshcolor(gradients[1]);
-            } else if (perc > 50 && perc <= 75) {
-                refreshcolor(gradients[2]);
-            } else if (perc > 75 && perc <= 100) {
-                refreshcolor(gradients[3]);
-            } 
+            const percentage = event.clientY / height;
+
+            const totalSteps = gradients.length - 1;
+            const step = Math.floor(percentage * totalSteps);
+            const localT = (percentage - step / totalSteps) * totalSteps;
+
+            const gradient1 = gradients[step];
+            const gradient2 = gradients[Math.min(step + 1, gradients.length - 1)];
+
+            const blended = gradient1.map((color, i) => lerpColor(color, gradient2[i], localT));
+
+            refreshcolor(blended);
         });
 
         function refreshcolor(list) {
@@ -54,6 +55,31 @@
                 ${list[3]} 75%, 
                 ${list[4]} 100%
             )`;
+        }
+
+        function hexToRgb(hex) {
+            //#RRGGBB
+            hex = hex.replace('#', '');
+            return {
+                r: parseInt(hex.substring(0, 2), 16),
+                g: parseInt(hex.substring(2, 4), 16),
+                b: parseInt(hex.substring(4, 6), 16)
+            };
+        }
+
+        function lerp(a, b, t) {
+            return a + (b - a) * t;
+        }
+
+        function lerpColor(a, b, t) {
+            const c1 = hexToRgb(a);
+            const c2 = hexToRgb(b);
+
+            const r = Math.round(lerp(c1.r, c2.r, t));
+            const g = Math.round(lerp(c1.g, c2.g, t));
+            const b2 = Math.round(lerp(c1.b, c2.b, t));
+
+            return `rgb(${r},${g},${b2})`;
         }
 
     </script>
